<resources>
    <string name="app_name">Popular Movies App</string>
    <string name="error_message">An error has occurred. Please try again!</string>
    <string name="original_tile">Original Title:</string>
    <string name="overview">Overview:</string>
    <string name="release_date">Release date:</string>
    <string name="user_rating">User rating:</string>
    <string name="popularity">Popularity:</string>
    <string name="movie_poster">Movie poster</string>
    <string name="top_rated">Top-rated</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated_title">Top Rated</string>
    <string name="most_popular_title">Most Popular</string>
    <string name="sort_by">Sort by:</string>
    <string name="refresh">Refresh</string>
    <string name="favorites">Favorites</string>
    <string name="fav_list_error">Your favourites list is currently empty!</string>
    <string name="trailer_1">Trailer 1</string>
    <string name="trailer_not_available">Trailer is unavailable!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_reviews_message">This movie has no reviews at the moment. Please check again later!</string>
    <string name="reviews">Reviews</string>
    <string name="poster_image">Poster image of selected movie</string>
    <string name="my_favorite_movies">my Favorite movies</string>
    <string name="failure_response">Results not available. Please refresh or try again later!</string>
    <string name="transition_image">transition_movie_image</string>
</resources>