<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/refresh"
        android:id="@+id/action_refresh"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>

                <item
                    android:title="@string/most_popular"
                    android:id="@+id/mostPopularMoviesFragment"
                    android:orderInCategory="2"
                    app:showAsAction="never"/>
                <item
                    android:title="@string/top_rated"
                    android:id="@+id/topRatedMoviesFragment"
                    android:orderInCategory="3"
                    app:showAsAction="never"
                    android:menuCategory="secondary"/>
                <item
                    android:title="@string/favorites"
                    android:id="@+id/favoritesMoviesFragment"
                    android:orderInCategory="4"
                    app:showAsAction="never"
                    android:contentDescription="@string/my_favorite_movies"
                    android:menuCategory="secondary"/>


</menu>